--- a/index.html
+++ b/index.html
@@ -1,64 +1,58 @@
-<html>
+<!DOCTYPE html>
+<html class="no-js">
 <head>
-	<meta charset="utf-8">
-	<title>第一个例子</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>居巢ACGN次元社</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<meta name="format-detection" content="telephone=yes" />
+<script type="text/javascript" src="js/timecountdown.js"></script>
+<script type="text/javascript" src="js/play.js"></script>
+<script type="text/javascript" src="js/time.js"></script>
+<link rel="stylesheet" href="css/style.css">
 </head>
-<body link="#000000" vlink="blue" alink="red" text="red">
-<!--开始-->
-<a name="top" id="top"></a>
-<font color="#66ccff" size="5" face="宋体">你好，世界！&gt;</font>
-<a href="#"><h4>chaoliaie</h4></a>
-<b><u><i>第一</i></u></b><br/>
-<u><i>第一</i></u><br/>
-<i>第一</i><br/>   <!-- br标签是表示换行 -->
-第一<br/>
-<p align="#">例子</p>
-<p align="left">例子</p>
-<p align="center">例子</p>
-<p align="right">例子</p>
-<p>例子</p>
-<p>例子</p>
-<a href="http://www.baidu.com" target="_blank">百度</a>
-<a href="mailto:1816588078@qq.com">投稿邮箱</a>
-<img src="01.jpg" alt="图片01" title="图片01">
-<p>例子</p>
-<p>例子</p>
-<p>例子</p>
-<p>例子</p>
-<p>例子</p>
-<p>例子</p>
-<p>例子</p>
-<p>例子</p>
-<p>例子</p>
-<p>例子</p>
-<p>例子</p>
-<a href="#top">返回顶部</a>
 
-<table width="800" height="400" border="2">
-	<tr>
-		<td colspan="2" bgcolor="red">&nbsp;</td>
-		<td bgcolor="#66ccff">&nbsp;</td>
-	</tr>
-	<tr>
-		<td rowspan="2" bgcolor="#000">&nbsp;</td>
-		<td >&nbsp;</td>
-		<td>&nbsp;</td>
-		
-	</tr>
-	<tr>
-		<td>&nbsp;</td>
-		<td>&nbsp;</td>
-	</tr>
-</table>
-<br/>
-<br/>
-<br/>
-<table bgcolor="#c0c0c0" width="800" height="200" border="1">
-	<tr><td colspan="2" style="text-align: center; color: #000" >表格</td></tr>
-	<tr><td style="text-align: center; color: #000">域名</td>
-		<td style="text-align: center; color: #000">说明</td>
-	</tr>
-
-</table>
+<body vlink="#65ECF4" alink="#CA78E6" link="#E0E0E0">
+<div>
+    <i>距完工大概还有</i>
+    <div>
+        <span class="red">
+            <p id="y1"></p>
+            <p>年</p>
+        </span>
+        <span class="yg">
+            <p id="d1"></p>
+            <p>天</p>
+        </span>
+        <span class="or">
+            <p id="h1"></p>
+            <p>时</p>
+        </span>
+        <span class="pi">
+            <p id="i1"></p>
+            <p>分</p>
+        </span>
+        <span class="pk">
+            <p id="s1"></p>
+            <p>秒</p>
+        </span>
+        <span class="mk">
+            <p id="m1"></p>
+            <p>毫秒</p>
+        </span>
+    </div>
+</div>
+<div style="text-align:center;clear:both;">
+<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
+<script src="/follow.js" type="text/javascript"></script>
+</div>
+	<br>
+	<br>
+<p style="text-align: center;">都进来了，不如来点小游戏吧？</p>
+<p style="text-align: center;">建议将手机横屏！</p>	
+<p style="text-align: center;"><a href="game/fruit-ninja/index.html" class="a">水果忍者</a></p>	
+<footer>
+	<audio id="music" src="audio/Perfume - コミュニケーション (交流).mp3" loop></audio>
+	<img src="img/u=2.png" onClick="play()" alt="user" style="margin-left: 45%;margin-top: 10px;"> 
+</footer>
 </body>
 </html>
