--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<br>
 <p style="text-align: center;">都进来了，不如来点小游戏吧？</p>
 <p style="text-align: center;">建议将手机横屏！</p>	
-<p style="text-align: center;"><a href="game/fruit-ninjia/index.html" class="a">水果忍者</a></p>	
+<p style="text-align: center;"><a href="http://m.jcacgn.top/game/fruit-ninjia/index.html" class="a">水果忍者</a></p>	
 <footer>
 	<audio id="music" src="audio/Perfume - コミュニケーション (交流).mp3" loop></audio>
 	<img src="img/u=2.png" onClick="play()" alt="user" style="margin-left: 45%;margin-top: 10px;"> 
