--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
 	<br>
 <p style="text-align: center;">都进来了，不如来点小游戏吧？</p>
 <p style="text-align: center;">建议将手机横屏！</p>	
-<p style="text-align: center;"><a href="http://m.jcacgn.top/game/fruit-ninjia/index.html" class="a">水果忍者</a></p>	
+<p style="text-align: center;"><a href="http://m.jcacgn.top/game/fruit-ninjia/index.html" class="a">水果忍者</a></p>
+<div style="width: 100%;height: 300px;">
+</div>
 <footer>
 	<audio id="music" src="audio/Perfume - コミュニケーション (交流).mp3" loop></audio>
 	<img src="img/u=2.png" onClick="play()" alt="user" style="margin-left: 45%;margin-top: 10px;"> 
+<p>版权所有 ©2020<a href="index.html" style="color: #000000; text-decoration: none">居巢ACGN</a></p>
 </footer>
 </body>
 </html>
