--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <footer>
 	<audio id="music" src="audio/Perfume - コミュニケーション (交流).mp3" loop></audio>
 	<img src="img/u=2.png" onClick="play()" alt="user" style="margin-left: 45%;margin-top: 10px;"> 
-<p>版权所有 ©2020<a href="index.html" style="color: #000000; text-decoration: none">居巢ACGN</a></p>
+<p style="text-align: center;">版权所有 ©2020<a href="index.html" style="color: #000000; text-decoration: none">居巢ACGN</a></p>
 </footer>
 </body>
 </html>
