--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>居巢ACGN次元社</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="format-detection" content="telephone=yes" />
+<link rel="shortcut icon" href="img/图标.ico" type="image/x-icon">
+<link rel="icon" href="img/图标.ico" type="image/x-icon">
 <script type="text/javascript" src="js/timecountdown.js"></script>
 <script type="text/javascript" src="js/play.js"></script>
 <script type="text/javascript" src="js/time.js"></script>
