--- a/index.html
+++ b/index.html
@@ -1,63 +1,41 @@
-<!DOCTYPE html>
-<html class="no-js">
+<!doctype html>
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>居巢ACGN次元社</title>
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<meta name="format-detection" content="telephone=yes" />
+<title>居巢ACGN次元社</title>
 <link rel="shortcut icon" href="img/图标.ico" type="image/x-icon">
 <link rel="icon" href="img/图标.ico" type="image/x-icon">
-<script type="text/javascript" src="js/timecountdown.js"></script>
-<script type="text/javascript" src="js/play.js"></script>
-<script type="text/javascript" src="js/time.js"></script>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/new2.css">
 </head>
-
-<body vlink="#65ECF4" alink="#CA78E6" link="#E0E0E0">
-<div>
-    <i>距完工大概还有</i>
-    <div>
-        <span class="red">
-            <p id="y1"></p>
-            <p>年</p>
-        </span>
-        <span class="yg">
-            <p id="d1"></p>
-            <p>天</p>
-        </span>
-        <span class="or">
-            <p id="h1"></p>
-            <p>时</p>
-        </span>
-        <span class="pi">
-            <p id="i1"></p>
-            <p>分</p>
-        </span>
-        <span class="pk">
-            <p id="s1"></p>
-            <p>秒</p>
-        </span>
-        <span class="mk">
-            <p id="m1"></p>
-            <p>毫秒</p>
-        </span>
-    </div>
+<body>
+<div id="top">
+<div id="top_img">
+<main id="top_main">
+<div id="top_logo"><img src="img/社徽.png" alt="居巢ACGN次元社"></div>
+<div id="top_title">
+<p style="text-align: center;width: 100%;height:auto" ><font color="#F8F8F8" size="+3">ACGN次元社</font></p>
+<hr class="top_hr_style01">
+<p style="text-align: center;width: 100%;height:auto" ><font color="#F8F8F8" size="-2">m.jcacgn.top</font></p>
 </div>
-<div style="text-align:center;clear:both;">
-<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
-<script src="/follow.js" type="text/javascript"></script>
-</div>
-	<br>
-	<br>
-<p style="text-align: center;">都进来了，不如来点小游戏吧？</p>
-<p style="text-align: center;">建议将手机横屏！</p>	
-<p style="text-align: center;"><a href="http://m.jcacgn.top/game/fruit-ninjia/index.html" class="a">水果忍者</a></p>
-<div style="width: 100%;height: 300px;">
-</div>
-<footer>
-	<audio id="music" src="audio/Perfume - コミュニケーション (交流).mp3" loop></audio>
-	<img src="img/u=2.png" onClick="play()" alt="user" style="margin-left: 45%;margin-top: 10px;"> 
-<p style="text-align: center;">版权所有 ©2020<a href="index.html" style="color: #000000; text-decoration: none">居巢ACGN</a></p>
+<ul id="top_navlist">
+<a class="top_nav" href="倒计时.html"><li>进入首页</li></a>
+<a class="top_nav" href="#"><li>动画</li></a>
+<a class="top_nav" href="#"><li>漫画</li></a>
+<a class="top_nav" href="#"><li>游戏</li></a>
+<a class="top_nav" href="#"><li>图集</li></a>
+</ul>
+</main>
+<footer id="top_footer">
+<span id="top_copyright">
+<hr class="top_hr_style02">
+本网站是居巢ACGN次元社官网！在这里你能找到很多欢乐！
+<audio  src="audio/onj001.mp3" autoplay></audio>
+<hr class="top_hr_style02">
+Copyright © 2020 m.jcacgn.top <a href="https://m.jcacgn.top/">居巢ACGN </a> 版权所有
+</span>
 </footer>
+</div>
+</div>
 </body>
 </html>
